# shell-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/commads/: commads.hpp  commands.cpp
src/commands/: base_command.hpp  cat_command.cpp  cat_command.hpp  cd_command.cpp  cd_command.hpp  clear_command.cpp  clear_command.hpp  commands.hpp  echo_command.cpp  echo_command.hpp  exit_command.cpp  exit_command.hpp  pwd_command.cpp  pwd_command.hpp  run_command.cpp  run_command.hpp  type_command.cpp  type_command.hpp
src/commands/command_repository/: command_repository.cpp  command_repository.hpp
src/completion/: trie.cpp  trie.hpp
src/executor/: executor.cpp  executor.hpp
src/parser/: parser.cpp  parser.hpp
src/shell/: shell.cpp  shell.hpp
src/tests/: competion_tests.cpp  get_command_path_test.cpp  parser_tests.cpp
src/utils/: file_utills.hpp  file_utils.cpp  string_utils.cpp  string_utils.hpp
